fixed dark mode icons

--- a/src/components/css/footer.css
+++ b/src/components/css/footer.css
@@ -5,7 +5,7 @@ footer{
     display: flex;
     align-items: center;
     justify-content: center;
-    background: var(--items-color);
+    background: var(--darkbackground);
 
     position: absolute;
     bottom: 0;
